k8s/base/aminer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: davtrowebdb
  labels:
    app: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer:4.8.1
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: davtrowebdb
spec:
  selector:
    app: adminer
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
